--- a/style.css
+++ b/style.css
@@ -2,81 +2,23 @@ body {
 
   font-size: 12pt;
 
-  font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
 
   color: black;
 
-  line-height: 14pt;
+  line-height: 16pt;
 
-  padding-left: 5pt;
+  padding-left: 10pt;
 
-  padding-right: 5pt;
+  padding-right: 10pt;
 
-  padding-top: 5pt;
-
-}
-
-
-h1 {
-
-  font: 16pt Verdana, Geneva, Arial, Helvetica, sans-serif;
-
-  font-weight: bold;
-
-  line-height: 20pt;
+  padding-top: 10pt;
 
 }
 
-
-p.subheader {
-
-  font-weight: bold;
-
-  color: #593d87;
-
+p.indent {
+  text-indent: 30px;
+  padding: 0;
+  margin: 0;
 }
 
-
-img {
-
-  padding: 3pt;
-
-  float: right;
-
-}
-
-
-a {
-
-  text-decoration: none;
-
-}
-
-
-a:link, a:visited {
-
-  color: #8094d6;
-
-}
-
-
-a:hover, a:active {
-
-  color: #FF9933;
-
-}
-
-
-div.footer {
-
-  font-size: 9pt;
-
-  font-style: italic;
-
-  line-height: 12pt;
-
-  text-align: center;
-
-  padding-top: 30pt;
-
-}
