--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+@font-face {
+  font-family: GentiumPlusW;
+  src: url(GentiumPlus-R.woff);
+}
+
 body {
+  background-color: black;
 
-  font-size: 12pt;
+  font-size: 16pt;
 
-  font-family: Arial, sans-serif;
+  font-family: GentiumPlusW, Arial;
 
-  color: black;
+  color: white;
 
-  line-height: 16pt;
+  line-height: 20pt;
 
   padding-left: 10pt;
 
@@ -23,10 +29,16 @@ p.indent {
 }
 
 table, th, td {
-  border: 20px solid white;
-  border-collapse: collapse;
+  border: 30px solid black;
+  border-collapse: separate;
 }
 th, td {
-  background-color: white;
+  background-color: black;
 }
 h1 {text-align: center;}
+
+/* @font-face {
+    font-family: BBCBengali;
+    src: url(fonts/BBCBengali.ttf) format("opentype");
+    unicode-range: U+00-FF, U+980-9FF;
+} /*
