--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
 
   font-size: 16pt;
 
-  font-family: GFSPorson, Arial, sans-serif;
+  font-family: GFSPorson, Arial, Helvetica, sans-serif;
 
-  color: #d4d9de;
+  color: #e9edf0;
 
   line-height: 20pt;
 
@@ -28,10 +28,15 @@ body {
   margin: 0;
 } */
 
-table, th, td {
+td {
   border: 20px solid #202124;
   border-collapse: separate;
+  width: 50%;
+  vertical-align: top;
 }
+
+
+
 /*th, td {
   background-color: black;
 }*/
