--- a/style.css
+++ b/style.css
@@ -123,6 +123,10 @@ body {
 
 p.indent {
   text-indent: 30px;
+}
+
+p.greek_indent {
+  text-indent: 30px;
   font-size: 110%
 }
 
@@ -701,3 +705,29 @@ h5,
 h6 {
   margin-bottom: 0.8rem;
 }
+
+ /* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 10px;
+  /*width: 30%;*/
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 10px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+} 
